# favia

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile  log.md
examples/basic/: favia.toml
examples/basic/content/: index.md
examples/basic/templates/: index.html
examples/blog/: index.md
examples/blog/content/: index.md
examples/blog/content/blog/: post-one.md  post-three.md  post-two.md
examples/blog/templates/blog/: [slug].html
examples/mix-nested-flat-structure/: README.md
examples/mix-nested-flat-structure/content/: about.md  testimonials.md
examples/mix-nested-flat-structure/content/contact/: index.md
examples/mix-nested-flat-structure/content/projects/: index.md
examples/mix-nested-flat-structure/templates/: base.html  contact.html  index.html
examples/mix-nested-flat-structure/templates/testimonials/: index.html
examples/two-page/content/: about.md  index.md
examples/two-page/templates/: about.html  base.html
src/: build.rs  builder.rs  cli.rs  config.rs  dev.rs  develop.rs  directories.rs  error.rs  lib.rs  main.rs  markdown.rs  new.rs  page_data.rs
tests/: build.rs  new.rs
