[package]
name = "favia"
version = "0.1.1"
edition = "2021"
description = "Zero-config, content-oriented static site generator"
license = "MIT"

[dependencies]
clap ={ version = "4.0", features = ["derive"] }
log = "0.4"
simplelog = "^0.12.0"
tera = "1"
markdown = "=1.0.0-alpha.5"
toml = "0.7.1"
walkdir = "2"
notify = "5.0.10"
rocket = "0.5.0-rc.2"
thiserror = "1.0"
railwind = "0.1.5"

[dev-dependencies]
mktemp = "0.5.0"
fs_extra = "1.3.0"
